update yu_haruwolf's description

--- a/src/members/yu_haruwolf/index.mdx
+++ b/src/members/yu_haruwolf/index.mdx
@@ -11,6 +11,9 @@ Blue wolf software engineer🐺
 「作りたいものを作りたい時に」
 技術を広く浅く学んでいます...
 
+ケモノ界隈でも技術コミュニティ作りたいな～とか思っていたら、良い感じのを作ってくれていました！！素敵！！
+積極的に関わっていけたらと思っているので、よろしくお願いします！！
+
 ## 各種リンク
 - コンカレ: https://concrnt.world/haruwolf.dev
 - X: https://x.com/Yu_HaruWolf
