--- a/src/members/yu_haruwolf/index.mdx
+++ b/src/members/yu_haruwolf/index.mdx
@@ -6,12 +6,12 @@ discord: 967810234070499429
 avatar: /assets/yu_haruwolf/avatar.png
 ---
 
-Blue wolf software engineer🐺
-学生ソフトウェアエンジニア
-「作りたいものを作りたい時に」
-技術を広く浅く学んでいます...
+Blue wolf software engineer🐺<br/>
+学生ソフトウェアエンジニア<br/>
+「作りたいものを作りたい時に」<br/>
+技術を広く浅く学んでいます...<br/>
 
-ケモノ界隈でも技術コミュニティ作りたいな～とか思っていたら、良い感じのを作ってくれていました！！素敵！！
+ケモノ界隈でも技術コミュニティ作りたいな～とか思っていたら、良い感じのを作ってくれていました！！<br/>
 積極的に関わっていけたらと思っているので、よろしくお願いします！！
 
 ## 各種リンク
@@ -29,16 +29,16 @@ Blue wolf software engineer🐺
 ## 最近やっていること
 
 ### Google Developer Groups(GDGs)
-Google の技術に関心を持った方々が集まって、勉強会や技術のキャッチアップをするコミュニティに積極的に参加しています。
-Google に関連する技術にとどまらず、コミュニティのメンバーが興味を持ったものや、必要としているものに対して積極的に取り組んでいっています。
-学生向けコミュニティ(GDG on Campus)では自身の大学でFounder / Organizerをしながら、Japan全体の合同イベント運営にも関わっています。
-一般向けコミュニティ(GDG)の方でも積極的な活動を目指しており、最近はGDG Tokyoの方でStaffとして活動中です。
+Google の技術に関心を持った方々が集まって、勉強会や技術のキャッチアップをするコミュニティに積極的に参加しています。<br/>
+Google に関連する技術にとどまらず、コミュニティのメンバーが興味を持ったものや、必要としているものに対して積極的に取り組んでいっています。<br/>
+学生向けコミュニティ(GDG on Campus)では自身の大学でFounder / Organizerをしながら、Japan全体の合同イベント運営にも関わっています。<br/>
+一般向けコミュニティ(GDG)の方でも積極的な活動を目指しており、最近はGDG Tokyoの方でStaffとして活動中です。<br/>
 
-### コンカレ
-自身の技術力向上・OSS開発経験を積むために、時間がある時にコンカレにコントリビュートさせていただいています。
-まだまだ未熟者で、コードレビューもたくさんしていただくかと思いますが、引き続きよろしくお願いします！
-より色んな方に使ってもらえるような取り組みを考え中...
+### Concurrent(コンカレ)
+自身の技術力向上・OSS開発経験を積むために、時間がある時にコンカレにコントリビュートさせていただいています。<br/>
+まだまだ未熟者で、コードレビューもたくさんしていただくかと思いますが、引き続きよろしくお願いします！<br/>
+より色んな方に使ってもらえるような取り組みを考え中...<br/>
 
 ### Android / Kotlin
-Androidアプリを開発するエンジニアを目指すために、現在鋭意勉強中です。
-Jetpack Compose等を使ってオリジナルアプリを作る試みに挑戦中...
+Androidアプリを開発するエンジニアを目指すために、現在鋭意勉強中です。<br/>
+Jetpack Compose等を使ってオリジナルアプリを作る試みに挑戦中...<br/>
