リンク修正

--- a/src/members/adoringonion/index.mdx
+++ b/src/members/adoringonion/index.mdx
@@ -8,11 +8,11 @@ avatar: /assets/adoringonion/avatar.jpg
 
 ## 各種リンク
 
-- ブログ: https://adoringonion.com（再建中。ちょっとまってね）
+- ブログ: https://adoringonion.com （再建中。ちょっとまってね）
 - X: https://x.com/bun_agais
 - GitHub: https://github.com/adoringonion
 - コンカレ: https://concrnt.world/adoringonion.com
-- Zenn : https://zenn.dev/adoringonion
+- Zenn : https://zenn.dev/adoring_onion
 - Pixiv: https://www.pixiv.net/users/11272449
 
 ## 最近やってること
