--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -9,7 +9,7 @@ avatar: /assets/inugamine/ingmne.JPG
 戌咬音かんぬきといいます。
 
 作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。
-Flutter だと i{OS|PadOS} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~
+Flutter だと i\{OS|PadOS\} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~
 Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。
 
 ## 手を出しているもの
