--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -1,15 +1,15 @@
 ---
 id: inugamine
 name: 戌咬音かんぬき(inugaminé)
-description: 
+description: Wie geht's dir Heute?
 discord: 258883784991178753
 avatar: /assets/inugamine/ingmne.JPG
 ---
 
 戌咬音かんぬきといいます。
 
-作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。
-Flutter だと i{OS|PadOS} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~
+作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。<br>
+Flutter だと i{OS|PadOS} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~ <br>
 Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。
 
 ## 手を出しているもの
@@ -22,7 +22,7 @@ Kotlin どころか Dart の勉強もままならないうちに Swift にも手
 ## 好きなもの
 - 新しいもの
 - ル ー ト ビ ア
-![喜んでいる冷蔵庫さんの様子](/src/assets/inugamine/rootBeer.jpeg)
+[喜んでいる冷蔵庫さんの様子](https://x.com/inugamine/status/1672460551824506885)
 
 
 ## かんぬきの足跡🐾
