description と反映されていない改行を修正しました

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: inugamine
 name: 戌咬音かんぬき(inugaminé)
-description: Wie geht's dir Heute?
+description: しっぽでタイピング、心でコーディング
 discord: 258883784991178753
 avatar: /assets/inugamine/ingmne.JPG
 ---
@@ -10,7 +10,8 @@ avatar: /assets/inugamine/ingmne.JPG
 
 作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。<br>
 Flutter だと i{OS|PadOS} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~ <br>
-Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。
+Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。<br>
+
 
 ## 手を出しているもの
 - Flutter: [https://flutter.dev/](https://flutter.dev/)
