Swift に手を出した旨を記載しました

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -10,14 +10,17 @@ avatar: /assets/inugamine/ingmne.JPG
 
 作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。<br>
 Flutter だと i{OS|PadOS} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~ <br>
-Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。<br>
-
+~~Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。~~ <br>
+Swift にも手を出してしまいました。<br>
+<br>
 
 ## 手を出しているもの
 - Flutter: [https://flutter.dev/](https://flutter.dev/)
     - Dart: [https://dart.dokyumento.jp](https://dart.dokyumento.jp)
 
 - Kotlin
+
+- Swift [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
 
 
 ## 好きなもの
