--- a/src/members/hibikinekage/index.mdx
+++ b/src/members/hibikinekage/index.mdx
@@ -1,6 +1,6 @@
 ---
 id: hibikinekage
-name: Hibikine Kaeg
+name: Hibikine Kage
 description: ねこです。HHKBをつかっています。
 discord: 224702834699010050
 avatar: /assets/hibikinekage/icon.png
