for-in構文について追記

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -22,6 +22,8 @@ Swift にも手を出してしまいました。<br>
 
 - Swift [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
 
+- Swift Playground のかんぬき的まとめ https://anthrotech.dev/@inugamine/swift/
+
 
 ## 好きなもの
 - 新しいもの
