--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -22,7 +22,7 @@ Swift にも手を出してしまいました。<br>
 
 - Swift [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
 
-- Swift Playground のかんぬき的まとめ https://anthrotech.dev/@inugamine/swift/
+- Swift Playground のかんぬき的まとめ https://anthrotech.dev/@inugamine/swiftPlayground/swiftMemo
 
 
 ## 好きなもの
