細かい誤字脱字を修正

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -18,17 +18,16 @@ Swift にも手を出してしまいました。<br/>
 - Flutter: [https://flutter.dev/](https://flutter.dev/)
     - Dart: [https://dart.dokyumento.jp](https://dart.dokyumento.jp)
 
-- Kotlin
+- Kotlin: [https://kotlinlang.org/](https://kotlinlang.org/)
 
-- Swift [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
+- Swift: [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
 
 - Swift Playground のかんぬき的まとめ https://anthrotech.dev/@inugamine/swiftPlayground/swiftMemo
 
 
 ## 好きなもの
 - 新しいもの
-- ル ー ト ビ ア
-[喜んでいる冷蔵庫さんの様子](https://x.com/inugamine/status/1672460551824506885)
+- ル ー ト ビ ア [喜んでいる冷蔵庫さんの様子](https://x.com/inugamine/status/1672460551824506885)
 
 
 ## かんぬきの足跡🐾
