改行を br タグから半角スペース2つという方式に変更しました。

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -8,11 +8,11 @@ avatar: /assets/inugamine/ingmne.JPG
 
 戌咬音かんぬきといいます。
 
-作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。<br/>
-Flutter だと i\{OS|PadOS\} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~ <br/>
-~~Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。~~ <br/>
-Swift にも手を出してしまいました。<br/>
-<br/>
+作りたいアプリがあって、アプリ制作のために本格的にプログラミングに手を出しました。  
+Flutter だと i\{OS|PadOS\} アプリや Android アプリ、デスクトップアプリも作れると聞いて(おトクやんか)と思っていたのですが、Dart の勉強をしていた筈が気がついたらいつの間にか Kotlin の勉強(2025年6月現在)をしていました。 ~~一体何があったんだ......~~   
+~~Kotlin どころか Dart の勉強もままならないうちに Swift にも手を出そうとしています。非常によくない。~~   
+Swift にも手を出してしまいました。  
+  
 
 ## 手を出しているもの
 - Flutter: [https://flutter.dev/](https://flutter.dev/)
