--- a/src/members/inugamine/swiftPlayground/swiftPlaygroundIndex.mdx
+++ b/src/members/inugamine/swiftPlayground/swiftPlaygroundIndex.mdx
@@ -1,15 +1,15 @@
 Apple が開発しているプログラミング言語 "Swift" について学ぶことができるアプリ Swift Playground で取り扱われている
 - コードを学ぼう 1
 - コードを学ぼう 2
-の個人的な回答や、何がどうなっているのかを備忘録として残しています。<br>
-もしよければ参考にしてみてください。<br>
-<br>
-<br>
-<br>
+
+の個人的な回答や、何がどうなっているのかを備忘録として残しています。  
+もしよければ参考にしてみてください。  
+  
 ## [Swift の基本](https://anthrotech.dev/@inugamine/swiftPlayground/swiftMemo)
-<br>
+
 ## コードを学ぼう 1
 ### チャプタ
+
 
 - [コマンド](https://anthrotech.dev/@inugamine/swiftPlayground/code1/command.mdx)
 
