--- a/src/members/inugamine/swiftPlayground/code1/command.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/command.mdx
@@ -251,9 +251,9 @@ toggleSwitch()
 ### ◇何をやってるの？  
 1. マップ全体のギミックを見渡したところ、ワープ装置を使うと、前に進むだけでよさそうということが分かりました。
 2. `func` キーワードを使って、いつものように `move()` 関数を定義しました。
-3. `collectGem()` と `toggleSwitch()` も使ってマップ上の宝石とスイッチを攻略しました。
+3. `collectGem()` と `toggleSwitch()` も使って、マップ上の宝石とスイッチを攻略しました。
 
-ワープ装置を使うと全体で 7 歩でクリアできますだ、左に曲がりながら移動すると 10 歩、歩くことになります。今回はらいたんの経路を通ってクリアするのが目標のため、ワープ装置を使いました。
-このコードも、全体的には特別なことはしていないので、コードの詳しい解説は割愛します。
+ワープ装置を使うと全体で 7 歩でクリアできますが、左に曲がりながら移動すると 10 歩移動することになります。今回はらいたんの経路を通ってクリアするのが目標のため、ワープ装置を使いました。
+このコードも全体的には特別なことはしていないので、コードの詳しい解説は割愛します。
 
 ---
