「新しい関数を作る」までの解説を記載しました。

--- a/src/members/inugamine/swiftPlayground/code1/function.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/function.mdx
@@ -23,13 +23,10 @@ collectGem()
 ```
 
 ### ◇何をやってるの？  
-1. a
+1. `func` キーワードを使って、好きに指定した数だけ前進する、`move()` という名前の**関数**を作っています。
 2. 左を向く `turnLeft()` を3回実行して、右を向かせています。
-3. c
 
-### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
+このコードも、`turnLeft()` を 3 回実行して右を向いている以外には特別なことはしていないので、コードの詳しい解説は割愛します。
 
 ---
 
@@ -60,13 +57,24 @@ toggleSwitch()
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. `func` キーワードを使って、`turnRight()` という名前の**関数**を作っています。
+2. for 文を使用して、`turnLeft()` を 3 回実行し、その場で右を向くようにしています。
+3. `moveForward()` や `toggleSwitch()` などの基本的なコマンドも使って、マップを攻略しています。
 
 ### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
+```swift
+func turnRight() {
+    for i in 1...3 {
+        turnLeft()
+    }
+}
+```
+
+`func` キーワードを使って、`turnRight()` という名前の**関数**を定義し、for 文を 3 回繰り返すように指定しました。  
+その中に `turnLeft()` コマンドを書くことで、`turnRight()` を呼び出した際に、中で `turnLeft()` が 3 回実行されます。  
+これ以降は、今回作成した `turnRight()` や、そのほかの基本的なコマンドを使って、マップを攻略しています。
+
+
 
 ---
 
