「関数」の単元の解説を記載しました。

--- a/src/members/inugamine/swiftPlayground/code1/function.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/function.mdx
@@ -103,13 +103,23 @@ collectYtoggle()
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. `func` キーワードを使って、宝石を取ったりスイッチをトグったりする動作をまとめています。
+2. まとめた一連の動作が終わったら、`moveForward()` と `turnLeft()` を実行し、残りの宝石やスイッチを処理します。
 
 ### ◇コードを詳しく見てみよう！
-- ### `code`
-  「前に進む、宝石を取る、前に進む、スイッチをトグる、前に進む」をひとつのパターンとして、`collectYtoggle()` という関数を定義しました。また、and と書くのがなんとなく面倒だったので、and の意味を持つスペイン語である y を使っています。コーディング上の意味はありません。
+```swift
+func collectYtoggle {
+    moveForward()
+    collectGem()
+    moveForward()
+    toggleSwitch()
+    moveForward()
+}
+```
+  「前に進む、宝石を取る、前に進む、スイッチをトグる、前に進む」をひとつのパターンとして、`collectYtoggle()` という関数を定義しました。また、and と書くのがなんとなく面倒だったので、and の意味を持つスペイン語である y を使っています。コーディング上の意味はありません。  
+
+  今回の解答例のコードの中で、`moveForward()` や `turnLeft()` が単体で実行されていることに気がつきましたか？  
+  一見すると、まとめた一連のコードを for 文を使って 4 回実行すれば良いように見えますが、実はマスの数が違っているため、解答例では `moveForward()` や `turnLeft()` を個別に実行することにしました。
 
 ---
 
@@ -119,32 +129,29 @@ collectYtoggle()
 ```
 回答コード例↓
 ``` swift
-func collectGem() {
+func getGems() {
     for i in 1...3 {
         collectGem()
         moveForward()
     }
 }
 
-collectGems()
+getGems()
 turnRight()
 moveForward()
 turnRight()
-collectGems()
+getGems()
 turnLeft()
 moveForward()
 turnLeft()
-collectGems()
+getGems()
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
-
-### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
+1. `func` キーワードを使って `getGems()` という**関数**を作り、`collectGem()` と `moveForward()` を for 文を使って繰り返し実行するようにしています。
+2. `getGems()` を実行し、宝石を集め終えると左右に方向転換しています。
+  
+このコードも、全体的には特別なことはしていないので、コードの詳しい解説は割愛します。
 
 ---
 
@@ -177,9 +184,10 @@ for i in 1...4 {
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. 後ろを向くための関数 `turnAround()` を定義しています。
+2. 後ろを向いた後に階段を降りるための関数 `solveStair()` を定義しています。
+3. 「階段を登る、`collectGem()` を実行する、`solveStair()` を実行する」という一連の動作を行う関数 `getGems()`  を定義しています。
+4. for 文を使って、`getGems()` と `turnLeft()` を 4 回実行しています。
 
 ### ◇コードを詳しく見てみよう！
 ```swift
@@ -190,8 +198,30 @@ func turnAround() {
 ```
 後ろを向くための関数 `turnAround()` を定義しました。中身は `turnLeft()` を 2 回実行しています。既にある機能を組み合わせて新たな機能を実現することを**コンポジション**と言うのでしたね。ちなみに `turnRight()` を 2 回実行するでももちろん OK です。
 
-
+```swift
+func solveStair() {
+    turnAround()
+    moveForward()
+}
+```
 `solveStair()` には、先ほど作成した `turnAround()` と `moveForward()` を入れ、宝石を回収した後に「階段を降りる」という機能を持たせました。
+
+```swift
+func getGems() {
+    moveForward
+    collectGem()
+    solveStair()
+}
+```
+`getGems()` には、先ほど作成した `solveStair()` や `collectGem()` などの基本的なコマンドを入れ、宝石を取る時の一連の動作を持たせました。
+
+```swift
+for i in 1...4 {
+    getGems()
+    turnLeft()
+}
+```
+一連の動作を行う関数を for 文で回し、「階段の上にある宝石を撮っては階段を降り、左を向く」を行なっています。もちろん右を向くでも問題ありません。
 
 ---
 
@@ -225,33 +255,11 @@ for i in 1...3 {
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. 「2 歩進んで宝石を取り、後ろを向いて 2 歩進んで元の位置に戻る」という関数を作成しています。
+2. 上記の関数をネストし、一列終わったら隣の列に移るという `solveRow()` 関数を作成しています。
+3. `solveRow()` を for 文で 3 回実行しています。
 
-### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
-
----
-
-##  template
-```
-目標: 
-```
-回答コード例↓
-``` swift
-
-```
-
-### ◇何をやってるの？  
-1. a
-2. b
-3. c
-
-### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
+このコードも、全体的には特別なことはしていないので、コードの詳しい解説は割愛します。
 
 ---
 
@@ -301,12 +309,80 @@ for i in 1...2 {
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. 線対称の地形になっていることに気がついたでしょうか。  
+   今回は、「右斜め上」と「右斜め下」で分けて考えてみます。  
+
+2. スイッチは 1 マス間隔で設置されています。つまり、「"2 歩進んで" スイッチをトグる」を繰り返せば良さそうです。  
+`moveThenToggle()` を定義し、この中で
+- for 文で `moveForward()` を 2 回実行する  
+- スイッチをトグる  
+を実行しています。
+
+3. 行き止まりに到達したら `turnAround()` で方向転換をします。
+4. 既にトグったスイッチに用はないので、`move()` や `moreSteps()` という関数を作成し、真ん中まで戻るようにしています。
+
+5. 短い道を往復、次に長い道を往復するというのを 1 セットとして for 文で回しています。
 
 ### ◇コードを詳しく見てみよう！
-- ### `code`
-  a
+``` swift
+func moveThenToggle(){
+    for i in 1...2{
+        moveForward()
+    }
+    toggleSwitch()
+}
+```
+↑今回の解答例の中心的な関数です。  
+「スイッチまで移動してトグる」という動作をまとめました。  
+  
+```swift
+func turnAround() {
+    for i in 1...2 {
+        turnLeft()
+    }
+}
+```
+↑もうおなじみ、振り返るという関数です。  
+  
+```swift
+func move(steps: Int) {
+    for i in 1 ... steps {
+        moveForward()
+    }
+}
+```
+↑指定した歩数分前進する関数です。"steps" というパラメータ名は自分で好きに決められるのでしたね。  
+  
+```swift
+func moreSteps() {
+    for i in 1 ... 2 {
+        move(steps: 2)
+    }
+}
+```
+↑引数に 2 を渡した `move()` 関数を for 文で 2 回実行する関数です。  
+  
+```swift
+for i in 1...2 {
+    moveThenToggle()
+    turnAround()
+    move(steps: 2)
+    turnLeft()
+    for i in 1...2{
+        moveThenToggle()
+    }
+    turnAround()
+    moreSteps()
+    turnLeft()
+}
+```
+↑ for 文を使い 2 回実行されるループを作成します。  
+その中で、まず短い道を歩いてスイッチをトグりに行きます。  
+スイッチをトグったら、前方が行き止まりなので　`turnAround()` で方向転換します。  
+`move()` の引数として 2 を渡し、来た道を戻ります。最初の位置に戻ってきたら、`turnLeft()` で長い道の方を向きます。  
+長い道には、同じ間隔でスイッチが設置してあります。つまり、`moveThenToggle()` を 2 回実行すれば良いわけです。for 文を使って 2 回実行しています。  
+
+💡豆知識:  
+for 文の i の部分は**ループ関数**と言うのでしたね。今回、for 文の i が同じコード内に 2 つ登場します。通常の関数は同じ名前を使用することができませんが、for 文で使われるこのループ関数は**ローカル関数**とも呼ばれ、その for 文でのみ参照されるという特徴があります。このため、同じ i という名前でも、衝突せずに使用することができるのです。
 
 ---
