refactor page path

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -22,7 +22,7 @@ Swift にも手を出してしまいました。
 
 - Swift: [https://developer.apple.com/jp/swift/](https://developer.apple.com/jp/swift/)
 
-- Swift Playground のかんぬき的まとめ https://anthrotech.dev/@inugamine/swiftPlayground/swiftPlaygroundIndex
+- Swift Playground のかんぬき的まとめ [swiftPlayground](/@inugamine/swiftPlayground)
 
 
 ## 好きなもの
