--- a/src/members/inugamine/swiftPlayground/index.mdx
+++ b/src/members/inugamine/swiftPlayground/index.mdx
@@ -1,3 +1,6 @@
+---
+title: SwiftPlayground
+---
 Apple が開発しているプログラミング言語 "Swift" について学ぶことができるアプリ Swift Playground で取り扱われている
 - コードを学ぼう 1
 - コードを学ぼう 2
