--- a/src/members/inugamine/swiftPlayground/code1/for.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/for.mdx
@@ -1,3 +1,208 @@
+## ループを使う
+```
+目標: for 文を使って、一連のコマンドを繰り返しましょう。
+```
+回答コード例↓
+``` swift
+for i in 1 ... 5 {
+    for i in 1 ... 2 {
+        moveForward()
+    }
+    collectGem()
+    moveForward()
+}
+
+```
+
+### ◇何をやってるの？  
+「2 歩進んで、宝石を取って、もう 1 歩進む」を一連の処理としてまとめ、それを for 文で 5 回繰り返しています。
+
+### ◇コードを詳しく見てみよう！
+- ### `for i in 1 ... 5`
+  `for` 文を使って、「5 回繰り返す」というコマンドブロックを作りました。  
+  `i` の部分は**ループ関数**であり、また**ローカル関数**とも呼ばれるのものです。この `i` の部分は、たとえば「 for `kurikaeshi` in 1 ... 5 」など、**自分で好きに決めることができる**のでしたね。
+
+- ### `for i in 1 ... 2`
+  上記の `for` 文に**ネスト**された `for` 文です。5 回繰り返すコードの中で、「前に進む」を 2 回繰り返すために記述しています。
+
+- ### `moveForward()`
+  おなじみの「前に進む」のコマンドですね。このフィールドでは、まず 2 回繰り返し実行して宝石のあるマスまで進む必要があるので、for 文のコマンドブロックを**ネスト**し、その中に記述しています。
+
+- ### `collectGem()`
+  おなじみの「宝石を取る」のコマンドです。
+
+- ### `moveForward()`
+  最後に 1 歩進み、ワープパッドの上に移動します。  
+  ワープパッドに乗ったら勝手にワープ先に移動するので、一連のコマンドとしてはこのコマンドが最後です。  
+
+その後は、いちばん外側の **5 回繰り返す for 文**が実行され、マップを進んでいきます。
+
+---
+
+## 4辺でループする
+```
+目標: for ループを使って、一連のコマンドを繰り返しましょう。
+```
+回答コード例↓
+``` swift
+for i in 1...4 {
+    moveForward()
+    collectGem()
+    moveForward()
+    moveForward()
+    moveForward()
+    turnRight()
+}
+```
+
+### ◇何をやってるの？  
+「前に進む、宝石を取る、前に 3 回進む右を向く」を一連の処理としてまとめ、それを for 文で 4 回繰り返しています。  
+コード自体は特段複雑な事はしていないので、コードの詳しい解説は割愛します。
+
+---
+
+## 端まで行って戻る
+```
+目標: for 文を使って、行き来するパターンを繰り返しましょう。
+```
+回答コード例↓
+``` swift
+func moreSteps(){
+    moveForward()
+    moveForward()
+}
+
+func turnAround() {
+    turnRight()
+    turnRight()
+}
+
+for i in 1...4{
+    moreSteps()
+    toggleSwitch()
+    turnAround()
+    moreSteps()
+    turnLeft()
+}
+```
+
+### ◇何をやってるの？  
+1. `moreSteps()` という関数を作り、中で `moveForward()` を 2 回実行するようにしています。
+2. `turnAround()` という関数を作り、中で `turnAround()` を 2 回実行するようにしています。
+3. 「2 歩進む、トグる、後ろを向く、さらに 2 歩進む、左を向く」を一連の処理としてまとめ、それを for 文で 4 回繰り返し、全方向に対応しています。
+
+このコードも、全体的には特別なことはしていないので、コードの詳しい解説は割愛します。
+
+---
+
+## ワープでループして
+```
+目標: ワープを通る繰り返しのパターンを見つけましょう。
+```
+回答コード例↓
+``` swift
+func twoSteps(steps: Int) {
+    for i in 1 ... steps {
+        moveForward()
+    }
+}
+
+for i in 1...5{
+    moveForward()
+    turnLeft()
+    twoSteps(steps: 2)
+    collectGem()
+    turnRight()
+}
+```
+
+### ◇何をやってるの？  
+1. Int 型の steps という引数を持った `twoSteps()` という関数を作り、任意の回数分 `moveForward()` を実行するようにしています。
+2. 「前に進む、左を向く、前に 2 歩進む、宝石を取る、右を向く」を一連の処理としてまとめ、それを for 文で 5 回実行するようにしています。
+
+このマップは一見複雑そうに見えますが、ジグザグに移動すれば全ての宝石を集めることができるようになっています。どこまでを一まとまりにすればよいかを落ち着いて考えてみましょう。
+
+---
+
+## 3 つの分かれ道
+```
+目標: 繰り返しのパターンを分解して、関数と for 文を作りましょう。
+```
+回答コード例↓
+``` swift
+func moreSteps(steps: Int) {
+    for i in 1 ... steps {
+        moveForward()
+    }
+}
+
+func turnAround() {
+    for i in 1...2 {
+        turnLeft()
+    }
+}
+
+func moveYtoggle() {
+    moreSteps(steps: 7)
+    toggleSwitch()
+    turnAround()
+    moreSteps(steps: 7)
+}
+
+for i in 1 ... 3{
+    moreSteps(steps: 2)
+    turnRight()
+    moveYtogglen()
+    turnRight()
+}
+```
+
+### ◇何をやってるの？  
+1. Int 型の steps という引数を持った `moreSteps()` という関数を作り、任意の回数分 `moveForward()` を実行するようにしています。
+2. `turnAround()` という関数を作り、中では for 文を使って `turnLeft()` を 2 回実行するようにしています。
+3. `moveYtoggle()` という関数では、先に作成していた `moreSteps()` に引数として 7 を渡し、スイッチまで 7 回進むように指定しています。　　
+さらに、その後に `toggleSwitch()` でスイッチをトグり、 `turnAround()` で後ろを向き、来た道を 7 歩戻るようにしています。
+
+全体として、「前に 2 歩進む、右を向く、スイッチをトグりに行って戻ってくる、右を向く」を橋 3 つ分繰り返し実行しています。
+
+---
+
+## template
+```
+目標: 
+```
+回答コード例↓
+``` swift
+
+```
+
+### ◇何をやってるの？  
+1. a
+2. b
+3. c
+
+aaa
+
+---
+
+## template
+```
+目標: 
+```
+回答コード例↓
+``` swift
+
+```
+
+### ◇何をやってるの？  
+1. a
+2. b
+3. c
+
+aaa
+
+---
+
 ## template
 ```
 目標: 
