--- a/src/members/inugamine/swiftPlayground/code1/for.mdx
+++ b/src/members/inugamine/swiftPlayground/code1/for.mdx
@@ -167,56 +167,209 @@ for i in 1 ... 3{
 
 ---
 
-## template
+## 右にも左にも
 ```
-目標: 
+目標: 複数の繰り返しのパターンを分解して、関数とループを作りましょう。
 ```
 回答コード例↓
 ``` swift
+func toggleYmove() {
+    for i in 1...2{
+        moveForward()
+        toggleSwitch()
+    }
+}
 
+func collectYmove() {
+    for i in 1...2 {
+        moveForward()
+        collectGem()
+    }
+}
+
+func turnAround() {
+    for i in 1 ... 2 {
+        turnRight()
+    }
+}
+
+func moreSteps(steps: Int) {
+    for i in 1 ... steps {
+        moveForward()
+    }
+}
+
+for i in 1...3{
+    turnLeft()
+    toggleYmove()
+    turnAround()
+    moreSteps(steps: 2)
+    collectYmove()
+    turnAround()
+    moreSteps(steps: 2)
+    turnRight()
+    moveForward()
+}
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. 今回のマップは、左にスイッチ、右に宝石がそれぞれ2つずつあります。ここでは、**まず左を向いて**、スイッチから攻略することにします。
+2. スイッチが 2 つ連続して設置してあるので、**前に進んでトグる**を 2 回繰り返し実行します。
+3. スイッチを 2 つトグったら後ろを向いて、さらに 2 歩進み、もとの箇所に戻ります。
+4. 今度は宝石が 2 つ連続して設置してあるので、**前に進んで宝石を取る**を 2 回繰り返し実行します。
+5. 宝石を 2 つ取ったら後ろを向いて、さらに 2 歩進み、もとの箇所に戻ります。
+6. 「右を向いて、前に 1 歩進む」を実行して、次の列に行きます。
+7. 上記の処理を一連の流れとして、全体で 3 回実行するようにしています。
 
-aaa
+### ◇コードを詳しく見てみよう！
+```swift
+func toggleYmove() {
+    for i in 1...2{
+        moveForward()
+        toggleSwitch()
+    }
+}
+```
+↑ `toggleYmove()` という関数を作り、その中で `moveForward()` と `toggleSwitch()` を 2 回繰り返す for 文を書きました。
+
+```swift
+func collectYmove() {
+    for i in 1...2 {
+        moveForward()
+        collectGem()
+    }
+}
+```
+↑ 宝石を取る以外は `toggleYmove()` と同じなので、`toggleYmove()` を流用して `collectYmove()` 関数を作りました。  
+　もちろん変更箇所は 4 行目を `toggleSwitch()` から `collectGem()` に変えただけです。
+
+```swift
+func turnAround() {
+    for i in 1 ... 2 {
+        turnRight()
+    }
+}
+```
+↑ 毎度おなじみ `turnAround()` です。ここでは for 文を使って「右を向く」を 2 回繰り返しています。
+
+```swift
+func moreSteps(steps: Int) {
+    for i in 1 ... steps {
+        moveForward()
+    }
+}
+```
+↑ 宝石やスイッチの処理が終わった後、もとの位置に戻る為に指定した歩数分歩くための関数です。  
+　今回は 2 歩戻ればよいため、steps には 2 を渡しています。
+
+```swift
+for i in 1...3{
+    turnLeft()
+    toggleYmove()
+    turnAround()
+    moreSteps(steps: 2)
+    collectYmove()
+    turnAround()
+    moreSteps(steps: 2)
+    turnRight()
+    moveForward()
+}
+```
+↑作成した関数を使って、スイッチをトグっては戻り、宝石を取っては戻りを for 文で 3 回実行するようにしています。  
+
+ひとつの列の列の解き方さえ分かってしまえば、あとは繰り返すだけなので、如何に for 文が便利かが分かりますね。
 
 ---
 
-## template
+## 4 つの場所に 4 つの宝石
 ```
-目標: 
-```
-回答コード例↓
-``` swift
-
-```
-
-### ◇何をやってるの？  
-1. a
-2. b
-3. c
-
-aaa
-
----
-
-## template
-```
-目標: 
+目標: パターンを見つけて分解し、関数を for 文を作る練習をしましょう。
 ```
 回答コード例↓
 ``` swift
+func turnAround() {
+    for i in 1 ... 2 {
+        turnLeft()
+    }
+}
 
+func collectGemRightSide() {
+    turnRight()
+    moveForward()
+    collectGem()
+    turnAround()
+    moveForward()
+}
+
+func straightGoToWarpPad() {
+    moveForward()
+    collectGem()
+    moveForward()
+}
+
+
+for i in 1 ... 4{
+    for i in 1 ... 2{
+        moveForward()
+        collectGem()
+    }
+    turnAround()
+    moveForward()
+    collectGemRightSide()
+    straightGoToWarpPad()
+}
 ```
 
 ### ◇何をやってるの？  
-1. a
-2. b
-3. c
+1. 「前に進む、宝石を取る」という一つの処理を for 文で 2 回繰り返し実行しています。
+2. 宝石を取り終わったら、`tuneAround()` と `moveForward()` を使って引き返します。
+3. `collectGemRightSide()` という関数で、引き返してきた地点の右側にある宝石を取り、引き返すという動きをしています。
+4. `straightGoToWarpPad()` という関数で、残りの宝石を取りつつポータルに向かっています。
 
-aaa
+### ◇コードを詳しく見てみよう！
+```swift
+func turnAround() {
+    for i in 1 ... 2 {
+        turnLeft()
+    }
+}
+```
+↑ `turnAround()` です。ここでは for 文を使って「左を向く」を 2 回繰り返しています。
+
+```swift
+func collectGemRightSide() {
+    turnRight()
+    moveForward()
+    collectGem()
+    turnAround()
+    moveForward()
+}
+```
+↑ 右側にある宝石を取りに行くための関数です。  
+　「右を向く、前に進む、宝石を取る、振り向く、前に進む」を一纏めにしています。
+
+```swift
+func straightGoToWarpPad() {
+    moveForward()
+    collectGem()
+    moveForward()
+}
+```
+↑ ワープパッドに向かいながら宝石を集める関数です。
+
+```swift
+for i in 1 ... 4{
+    for i in 1 ... 2{
+        moveForward()
+        collectGem()
+    }
+    turnAround()
+    moveForward()
+    collectGemRightSide()
+    straightGoToWarpPad()
+}
+```
+↑ 作成した関数を使い、縦二つに並んだ宝石をまず取りに行きます。  
+　そのあと振り返って右側の宝石、最後にワープパッドの隣の宝石を取るという流れで 4 回繰り返し実行します。
 
 ---
