description を更新しました。

--- a/src/members/inugamine/index.mdx
+++ b/src/members/inugamine/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: inugamine
 name: 戌咬音かんぬき(inugaminé)
-description: しっぽでタイピング、心でコーディング
+description: しっぽでタイピング
 discord: 258883784991178753
 avatar: /assets/inugamine/ingmne.JPG
 ---
